--- a/NumericalMethods_Lab2/NumericalMethods_Lab2/NumericalMethods_Lab2.vcxproj
+++ b/NumericalMethods_Lab2/NumericalMethods_Lab2/NumericalMethods_Lab2.vcxproj
@@ -19,10 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\source\ConjugateGradientsMethod.cpp" />
     <ClCompile Include="..\source\NumericalMethods_Lab2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\array_methods.h" />
+    <ClInclude Include="..\include\ConjugateGradientsMethod.h" />
     <ClInclude Include="..\include\functions.h" />
     <ClInclude Include="..\include\methods.h" />
     <ClInclude Include="..\include\structures.h" />
@@ -85,6 +87,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>..\..\tmp</OutDir>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutDir>..\..\tmp\</OutDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -134,6 +139,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
