--- a/NumericalMethods_Lab2/NumericalMethods_Lab2/NumericalMethods_Lab2.vcxproj
+++ b/NumericalMethods_Lab2/NumericalMethods_Lab2/NumericalMethods_Lab2.vcxproj
@@ -139,7 +139,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <OpenMPSupport>true</OpenMPSupport>
+      <OpenMPSupport>false</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
